[package]
name = "note-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }

log = "*"
log4rs = "*"

anyhow = "*"
async-trait = "0.1"

async-std = "1.12"
tokio = { version = "1.20", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bastion = { version = "0.4.5", features = ["tokio-runtime"] }

cqrs-es = "0.4"

hypercore = { path = "./hypercore" }
hyperswarm = { git = "https://github.com/datrs/hyperswarm-rs.git", version = "0.1.0" }
hypercore-protocol = { path = "./hypercore-protocol-rs" }

hex = "0.4"
rand = "0.8"
